Issue #3377207 by bnjmnm, smustgrave: Dialog close icon not reliably visible in forced colors mode

--- a/core/themes/claro/css/components/dialog.pcss.css
+++ b/core/themes/claro/css/components/dialog.pcss.css
@@ -89,6 +89,12 @@
   background: url(../../images/icons/d3d4d9/ex.svg) no-repeat 50%;
 }
 
+@media (forced-colors: active) {
+  .ui-dialog .ui-icon.ui-icon-closethick {
+    background: url(../../images/icons/buttonText/ex.svg) no-repeat 50%;
+  }
+}
+
 .ui-dialog > .ui-dialog-content {
   overflow: auto;
   padding: var(--space-m) var(--space-l);
